# udemy-llm-apps

./: .gitignore  README.md  home.py  init_sqlite.py  memo.txt  pyproject.toml
.devcontainer/: devcontainer.json
pages/: agent.py  function_calling.py  qa.py  recipe.py  simple_chat.py  sql.py  tagging.py
static/json/: recipe.json
static/prompt/: recipe.txt
